<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/midAubergine100Percent"
    tools:context="com.clww.nine_pad.MainActivity">


    <Button
        android:id="@+id/button1"
        android:layout_width="108dp"
        android:layout_height="108dp"
        android:background="@drawable/nine_buttons"
        android:text="@string/button_1_label"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.057"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.239" />

    <Button
        android:id="@+id/button2"
        android:layout_width="108dp"
        android:layout_height="108dp"
        android:background="@drawable/nine_buttons"
        android:text="@string/button_2_label"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.239" />

    <Button
        android:id="@+id/button3"
        android:layout_width="108dp"
        android:layout_height="108dp"
        android:background="@drawable/nine_buttons"
        android:text="@string/button_3_label"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.942"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.239" />

    <Button
        android:id="@+id/button4"
        android:layout_width="108dp"
        android:layout_height="108dp"
        android:background="@drawable/nine_buttons"
        android:text="@string/button_4_label"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.059"
        app:layout_constraintLeft_toLeftOf="@+id/button1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.483" />

    <Button
        android:id="@+id/button5"
        android:layout_width="108dp"
        android:layout_height="108dp"
        android:background="@drawable/nine_buttons"
        android:text="@string/button_5_label"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintLeft_toLeftOf="@+id/button2"
        app:layout_constraintRight_toRightOf="@+id/button2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.483" />

    <Button
        android:id="@+id/button6"
        android:layout_width="108dp"
        android:layout_height="108dp"
        android:background="@drawable/nine_buttons"
        android:text="@string/button_6_label"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.94"
        app:layout_constraintRight_toRightOf="@+id/button3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.483" />

    <Button
        android:id="@+id/button7"
        android:layout_width="108dp"
        android:layout_height="108dp"
        android:background="@drawable/nine_buttons"
        android:text="@string/button_7_label"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.059"
        app:layout_constraintLeft_toLeftOf="@+id/button4"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.729" />

    <Button
        android:id="@+id/button8"
        android:layout_width="108dp"
        android:layout_height="108dp"
        android:background="@drawable/nine_buttons"
        android:text="@string/button_8_label"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintLeft_toLeftOf="@+id/button5"
        app:layout_constraintRight_toRightOf="@+id/button5"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.729" />

    <Button
        android:id="@+id/button9"
        android:layout_width="108dp"
        android:layout_height="108dp"
        android:background="@drawable/nine_buttons"
        android:text="@string/button_9_label"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.94"
        app:layout_constraintRight_toRightOf="@+id/button6"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.729" />

    <Button
        android:id="@+id/buttonSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_Settings_label"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.945"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.03" />

    <Switch
        android:id="@+id/switchRecord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/switch_Record_label"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.946"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.937" />

    <Switch
        android:id="@+id/switchVolume"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/switch_Volume_label"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.054"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.937" />

</android.support.constraint.ConstraintLayout>
